# ProjetoEDA_V3

./: CMakeLists.txt  gestao.cpp  gestao.h  initialization.cpp  initialization.h  main.cpp  pecas.cpp  pecas.h  readFiles.cpp  readFiles.h  sales.cpp  sales.h  section.h  sections.cpp  sections.h  simulator.cpp  simulator.h  utils.cpp  utils.h
